--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <section>
-      <div>
-        <div><img src="./assets/images/QR.png" alt="image of a qr code" /></div>
-        <h1>Improve your front-end skills by building projects</h1>
-        <h2>Scan the QR code to visit Frontend Mentor and take your coding skills to</h2>
-        <div></div>
-      </div>
-    </section>
+    <div>
+      <img src="./assets/images/QR.png" alt="image of a qr code" />
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+      </p>
+    </div>
   </body>
 </html>
