--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <img src="./assets/images/QR.png" alt="image of a qr code" />
+    <div class="card">
+      <div class="image">
+        <img
+          src="./assets/images/QR.png"
+          alt="image of a qr code"
+          height="100rem"
+          width="100rem"
+          title = "Frontend mentor"
+        />
+      </div>
       <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
