--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="front-end entry page">
     <title>Document</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
       <div class="image">
         <img
           src="./assets/images/QR.png"
-          alt="image of a qr code"
+          alt="qr code to  front-end website"
           height="100rem"
           width="100rem"
           title = "Frontend mentor"
